Adding timer to blink the LED when a signal is decoded. Adding circular buffer to store received signal. Interpreting signal in a kthread to release the IRQ handler ASAP.

--- a/irdriver/Makefile
+++ b/irdriver/Makefile
@@ -13,7 +13,7 @@ EXTRA_CFLAGS += $(DEBFLAGS)
 # Check if we are into the kernel build system or not.
 ifneq ($(KERNELRELEASE),)
   obj-m	:= irdriver.o
-  irdriver-objs := irdriver_main.o irsignal.o irsignal_pulses.o
+  irdriver-objs := irdriver_main.o irsignal.o irsignal_pulses.o led.o irdriver_circular_buffer.o
 else
 
 KERNELDIR ?= /lib/modules/$(shell uname -r)/build
